Added h1 tag to all pages

--- a/blackhistory.html
+++ b/blackhistory.html
@@ -68,7 +68,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img  alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -101,7 +101,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt="African Connections Logo"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -171,9 +171,11 @@
       <section class="breadcrumbs-custom-inset">
         <div class="breadcrumbs-custom context-dark bg-overlay-60">
           <div class="container">
-            <h2 class="breadcrumbs-custom-title"></h2>
+            <h1 class="breadcrumbs-custom-title"><strong>BLACK HISTORY MONTH</strong></h1>
+            <br>
+            <h2><strong>RETURN TO THE MOTHERLAND TOUR</strong></h2>
             <ul class="breadcrumbs-custom-path">
-              <li><a href="indexhtml"></a></li>
+              <li></li>
             </ul>
           </div>
           <div class="box-position" style="background-image: url(img/bhm/bhm.png);"></div>
@@ -334,42 +336,42 @@
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/1.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/1.jpg" alt="">
+                                <img src="img/bhm/new/1.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/2.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/2.jpg" alt="">
+                                <img src="img/bhm/new/2.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/3.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/3.jpg" alt="">
+                                <img src="img/bhm/new/3.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/4.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/4.jpg" alt="">
+                                <img src="img/bhm/new/4.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/5.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/5.jpg" alt="">
+                                <img src="img/bhm/new/5.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/bhm/new/6.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/bhm/new/6.jpg" alt="">
+                                <img src="img/bhm/new/6.jpg" alt="Black History Month Tour photo">
                               </a>
                             </div>
                           </div>
@@ -381,7 +383,7 @@
 
             <div class="col-sm-12 col-md-3 col-lg-3 wow fadeInRight" data-wow-delay=".1s" style="border-color: gray; border: 1px solid #d7dce3; padding: 0px; max-height: 750px;">
               <div class="form-head" style="background-color: #cc6600; border-color: #cc6600;">
-                <img src="img/general/avatar-circle.jpg" style="height: 50px;">
+                <img src="img/general/avatar-circle.jpg" alt="CEO avatar animation" style="height: 50px;">
                 <span style="width: 100%; font-size: 15px; font-weight: 500; margin-left: 10px;">How Can We Help?</span>
               </div>
 
@@ -437,22 +439,6 @@
               </form>
             </div>
 
-            <!--
-            <div class="col-sm-12 col-md-12 col-lg-4 text-center wow fadeInUp" style="height: 100px;">
-              <img src="images/index-3-556x382.jpg" alt="" width="556" height="382"/>
-                <article class="box-icon-classic" style="height: fit-content;">
-                  <div class="unit box-icon-classic-body flex-column flex-md-row text-md-left flex-lg-column text-lg-center flex-xl-row text-xl-left">
-                    <div class="unit-left">
-                      <div class="box-icon-classic-icon fl-bigmug-line-equalization3"></div>
-                    </div>
-                    <div class="unit-body">
-                      <h5 class="box-icon-classic-title"><a href="#">Personalized Matching</a></h5>
-                      <p class="box-icon-classic-text">Our unique matching system lets you find just the tour you want for your next holiday.</p>
-                    </div>
-                  </div>
-                </article>
-            </div>
-          -->
           </div>
         </div>
       </section>
@@ -473,7 +459,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal"/>
                             </a>
                           </div>
                         </div>
