--- a/egypt.html
+++ b/egypt.html
@@ -67,7 +67,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -100,7 +100,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" alt="African Connections Logo" style="height: 55px; width: 144px;"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -168,7 +168,9 @@
       <section class="breadcrumbs-custom-inset">
         <div class="breadcrumbs-custom context-dark bg-overlay-60">
           <div class="container">
-            <!--<h2 class="breadcrumbs-custom-title">EGYPT "LAND OF PHARAOHS" AFRICAN HERITAGE TOUR</h2>-->
+            <h1 class="breadcrumbs-custom-title"><strong>EGYPT "LAND OF PHARAOHS"</strong></h1>
+            <br>
+            <h2><strong>AFRICAN HERITAGE TOUR</strong></h2>
             <ul class="breadcrumbs-custom-path">
             </ul>
           </div>
@@ -205,9 +207,7 @@
                         <br><br>We explore Egypt, visiting Cairo, the West Bank, Luxor, Alexandria, the Valley of the Kings, Aswan and Karnak. We will visit the Temple of Karnak, the Temple of Luxor, the Valley of the Kings, the Temple of Nefertari; visit the colossal Temple of Abu Simbel, stand under the granite statues of Ramses the Great; and so much more!
 
                         <br><br>
-                        <br><br>
-                        <strong>First Tour Date:</strong> October 1st - 12th 2024 <strong>(12 Days)</strong>
-                        <br><strong>Second Tour Date:</strong> September 30th - October 11th 2025 <strong>(12 Days)</strong>
+                        <strong>Date:</strong> September 30th - October 11th 2025 <strong>(12 Days)</strong>
                         <br><br>
                         <strong>Price: </strong>Only $3,599 per person, with double room occupancy
 
@@ -329,42 +329,42 @@
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/1.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/1.jpg" alt="">
+                            <img src="img/egypt/new/1.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/2.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/2.jpg" alt="">
+                            <img src="img/egypt/new/2.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/3.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/3.jpg" alt="">
+                            <img src="img/egypt/new/3.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/4.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/4.jpg" alt="">
+                            <img src="img/egypt/new/4.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/5.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/5.jpg" alt="">
+                            <img src="img/egypt/new/5.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-image">
                           <a href="img/egypt/new/6.jpg" data-fancybox="gallery" data-caption="">
-                            <img src="img/egypt/new/6.jpg" alt="">
+                            <img src="img/egypt/new/6.jpg" alt="Egypt Tour Photo">
                           </a>
                         </div>
                       </div>
@@ -376,7 +376,7 @@
 
             <div class="col-sm-12 col-md-3 col-lg-3 wow fadeInRight" data-wow-delay=".1s" style="border-color: gray; border: 1px solid #d7dce3; padding: 0px; max-height: 750px;">
               <div class="form-head" style="background-color: #cc6600; border-color: #cc6600;">
-                <img src="img/general/avatar-circle.jpg" style="height: 50px;">
+                <img src="img/general/avatar-circle.jpg" alt="CEO Avatar Photo" style="height: 50px;">
                 <span style="width: 100%; font-size: 15px; font-weight: 500; margin-left: 10px;">How Can We Help?</span>
               </div>
 
@@ -431,23 +431,6 @@
                 </div>
               </form>
             </div>
-
-            <!--
-            <div class="col-sm-12 col-md-12 col-lg-4 text-center wow fadeInUp" style="height: 100px;">
-              <img src="images/index-3-556x382.jpg" alt="" width="556" height="382"/>
-                <article class="box-icon-classic" style="height: fit-content;">
-                  <div class="unit box-icon-classic-body flex-column flex-md-row text-md-left flex-lg-column text-lg-center flex-xl-row text-xl-left">
-                    <div class="unit-left">
-                      <div class="box-icon-classic-icon fl-bigmug-line-equalization3"></div>
-                    </div>
-                    <div class="unit-body">
-                      <h5 class="box-icon-classic-title"><a href="#">Personalized Matching</a></h5>
-                      <p class="box-icon-classic-text">Our unique matching system lets you find just the tour you want for your next holiday.</p>
-                    </div>
-                  </div>
-                </article>
-            </div>
-          -->
           </div>
         </div>
       </section>
@@ -468,7 +451,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal" />
                             </a>
                           </div>
                         </div>
