--- a/returntomotherland.html
+++ b/returntomotherland.html
@@ -67,7 +67,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -100,7 +100,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" alt="African Connections Logo" style="height: 55px; width: 144px;"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -170,7 +170,9 @@
       <section class="breadcrumbs-custom-inset" style="height: 500px;">
         <div class="breadcrumbs-custom context-dark bg-overlay-60 box-position2 gfg-div">
           <div class="container">
-            <h2 class="breadcrumbs-custom-title"></h2>
+            <h1 style="display: none;" class="breadcrumbs-custom-title"><strong>RETURN TO THE MOTHERLAND</strong></h1>
+            <br>
+            <h2 style="display: none;"><strong>AFRICAN FESTIVAL TOUR</strong></h2>
             <ul class="breadcrumbs-custom-path">
               <li><a href="#"></a></li>
             </ul>
@@ -208,7 +210,7 @@
                               all over town.
                             
                             <br><br>
-                            <strong>First Tour Date:</strong> June 18th - June 29th 2024<strong> (12 Days)</strong>
+                            <span style="color: gray;"><strong>First Tour Date:</strong> June 18th - June 29th 2024<strong> (SOLD OUT)</strong></span>
                             <br><strong>Second Tour Date:</strong> October 22nd - November 1st 2024 <strong> (12 Days)</strong>
                             <br><br>
                             <strong>Price: Only <span  style="text-decoration: line-through;">$3,499</span> $2,999 per person, with double room occupancy, without air-fare </strong>
@@ -327,42 +329,42 @@
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/1.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/1.jpg" alt="">
+                                <img src="img/returntomotherland/new/1.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/2.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/2.jpg" alt="">
+                                <img src="img/returntomotherland/new/2.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/3.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/3.jpg" alt="">
+                                <img src="img/returntomotherland/new/3.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/4.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/4.jpg" alt="">
+                                <img src="img/returntomotherland/new/4.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/5.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/5.jpg" alt="">
+                                <img src="img/returntomotherland/new/5.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
                           <div class="card">
                             <div class="card-image">
                               <a href="img/returntomotherland/new/6.jpg" data-fancybox="gallery" data-caption="">
-                                <img src="img/returntomotherland/new/6.jpg" alt="">
+                                <img src="img/returntomotherland/new/6.jpg" alt="Return To The Motherland Tour Photo">
                               </a>
                             </div>
                           </div>
@@ -374,7 +376,7 @@
 
             <div class="col-sm-12 col-md-3 col-lg-3 wow fadeInRight" data-wow-delay=".1s" style="border-color: gray; border: 1px solid #d7dce3; padding: 0px; max-height: 750px;">
               <div class="form-head" style="background-color: #cc6600; border-color: #cc6600;">
-                <img src="img/general/avatar-circle.jpg" style="height: 50px;">
+                <img src="img/general/avatar-circle.jpg" alt="CEO Avatar Photo" style="height: 50px;">
                 <span style="width: 100%; font-size: 15px; font-weight: 500; margin-left: 10px;">How Can We Help?</span>
               </div>
 
@@ -429,23 +431,6 @@
                 </div>
                 </form>
             </div>
-
-            <!--
-            <div class="col-sm-12 col-md-12 col-lg-4 text-center wow fadeInUp" style="height: 100px;">
-              <img src="images/index-3-556x382.jpg" alt="" width="556" height="382"/>
-                <article class="box-icon-classic" style="height: fit-content;">
-                  <div class="unit box-icon-classic-body flex-column flex-md-row text-md-left flex-lg-column text-lg-center flex-xl-row text-xl-left">
-                    <div class="unit-left">
-                      <div class="box-icon-classic-icon fl-bigmug-line-equalization3"></div>
-                    </div>
-                    <div class="unit-body">
-                      <h5 class="box-icon-classic-title"><a href="#">Personalized Matching</a></h5>
-                      <p class="box-icon-classic-text">Our unique matching system lets you find just the tour you want for your next holiday.</p>
-                    </div>
-                  </div>
-                </article>
-            </div>
-          -->
           </div>
         </div>
       </section>
@@ -466,7 +451,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal" />
                             </a>
                           </div>
                         </div>
