--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img  alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -99,7 +99,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" alt="African Connections Logo" style="height: 55px; width: 144px;"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -169,7 +169,7 @@
       <section class="breadcrumbs-custom-inset">
         <div class="breadcrumbs-custom context-dark bg-overlay-60">
           <div class="container">
-            <h2 class="breadcrumbs-custom-title">WE KNOW AFRICA BEST</h2>
+            <h1 class="breadcrumbs-custom-title"><strong>WE KNOW AFRICA BEST</strong></h1>
             <ul class="breadcrumbs-custom-path">
             </ul>
           </div>
@@ -193,10 +193,8 @@
                   <!-- Tab panes-->
                   <div class="tab-content">
                     <div class="tab-pane fade show active" id="tabs-7-1">
+                      <h4><strong>With over 20 years of Africa tour experience-- We know Africa Best!</strong></h4>
                       <p>
-                        <strong>With over 20 years of Africa tour experience-- We know Africa Best!</strong>
-                        
-                        <br><br>
                         We provide exceptional service at the best price!
                         <br><br>
                         African Connections North America (AC-USA) is a U.S. based company that is
@@ -253,7 +251,7 @@
                     <div class="tab-pane fade" id="tabs-7-3">
                       <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-4">
-                          <img class="img-fluid" src="img/about/dr_hakeem.jpg" alt="">
+                          <img class="img-fluid" src="img/about/dr_hakeem.jpg" alt="Photo of CEO">
                         </div>
                         <div class="col-sm-12 col-md-8 col-lg-8">
                           <p>
@@ -295,23 +293,6 @@
                   </div>
                 </div>
             </div>
-
-            <!--
-            <div class="col-sm-12 col-md-12 col-lg-4 text-center wow fadeInUp" style="height: 100px;">
-              <img src="images/index-3-556x382.jpg" alt="" width="556" height="382"/>
-                <article class="box-icon-classic" style="height: fit-content;">
-                  <div class="unit box-icon-classic-body flex-column flex-md-row text-md-left flex-lg-column text-lg-center flex-xl-row text-xl-left">
-                    <div class="unit-left">
-                      <div class="box-icon-classic-icon fl-bigmug-line-equalization3"></div>
-                    </div>
-                    <div class="unit-body">
-                      <h5 class="box-icon-classic-title"><a href="#">Personalized Matching</a></h5>
-                      <p class="box-icon-classic-text">Our unique matching system lets you find just the tour you want for your next holiday.</p>
-                    </div>
-                  </div>
-                </article>
-            </div>
-          -->
           </div>
         </div>
       </section>
@@ -332,7 +313,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal" />
                             </a>
                           </div>
                         </div>
