--- a/ghana-home.html
+++ b/ghana-home.html
@@ -63,7 +63,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -96,7 +96,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" alt="African Connections Logo" style="height: 55px; width: 144px;"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -166,7 +166,7 @@
       <section class="breadcrumbs-custom-inset">
         <div class="breadcrumbs-custom context-dark bg-overlay-60">
           <div class="container">
-            <h2 class="breadcrumbs-custom-title">GHANA TOURS</h2>
+            <h1 class="breadcrumbs-custom-title"><strong>GHANA TOURS</strong></h1>
             <ul class="breadcrumbs-custom-path">
             </ul>
           </div>
@@ -192,13 +192,20 @@
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="Return To The Motherland Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html">
-                          <strong>June 18th - June 29th 2024 || October 22nd - November 1st 2024<br>12 Days</strong></a></div>
+                        <div class="product-big-rating">
+                          <a class="product-big-reviews" href="returntomotherland.html">
+                            <strong>
+                            <span style="color: gray;">June 18th - June 29th 2024 (SOLD OUT)</span>
+                            <br>
+                            October 22nd - November 1st 2024<br>12 Days
+                            </strong>
+                          </a>
+                        </div>
                       </div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience one of Ghana’s most exciting events.
@@ -216,7 +223,7 @@
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="#"><img src="img/tours/ghana_togo_benin.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="#"><img src="img/tours/ghana_togo_benin.jpg" alt="Ghana Togo Benin Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="brochures/ghana_togo_benin.pdf">Ghana, Togo, Benin Ouidah Voodoo Festival Tour</a></h5>
@@ -243,7 +250,7 @@
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="blackhistory.html"><img src="img/tours/blackhistorymonth.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="blackhistory.html"><img src="img/tours/blackhistorymonth.jpg" alt="Black History Month Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
@@ -272,7 +279,7 @@
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="panafest.html"><img src="img/home/1hottours.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="panafest.html"><img src="img/home/1hottours.jpg" alt="PANAFEST Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="panafest.html">PANAFEST, African Heritage Tour</a></h5>
@@ -313,7 +320,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal" />
                             </a>
                           </div>
                         </div>
