--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       fbq('init', '705561148188440');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
+    <noscript><img alt="facebook image" height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=705561148188440&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -162,7 +162,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" style="height: 55px; width: 144px;" alt=""/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/aclogo.png" alt="African Connections Logo" style="height: 55px; width: 144px;"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -195,14 +195,6 @@
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap">
-                  <!--
-                    <ul class="list-inline list-inline-md rd-navbar-corporate-list-social">
-                    <li><a class="icon fa fa-facebook" href="#"></a></li>
-                    <li><a class="icon fa fa-twitter" href="#"></a></li>
-                    <li><a class="icon fa fa-google-plus" href="#"></a></li>
-                    <li><a class="icon fa fa-instagram" href="#"></a></li>
-                  </ul>
-                  -->
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active">
@@ -238,21 +230,6 @@
       </header>
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-corporate swiper-pagination-style-2" data-loop="true" data-autoplay="5000" data-simulate-touch="true" data-nav="false" data-direction="vertical">
-        <!--  
-        <div class="swiper-slide context-dark" data-slide-bg="img/home/dollar_500_promo.png">
-            <div class="swiper-slide-caption section-md">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-10">
-                    <h6 class="text-uppercase" data-caption-animate="fadeInRight" data-caption-delay="0"></h6>
-                    <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100"><span>Visit</span><span class="font-weight-bold"> Ghana</span></h2><a class="button button-default-outline button-ujarak" href="returntomotherland.html" data-caption-animate="fadeInLeft" data-caption-delay="0">Book A Tour</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        -->
-
           <div class="swiper-slide context-dark" data-slide-bg="img/home/sliderghana.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
@@ -303,7 +280,7 @@
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="ghana-home.html">
-                        <img src="img/home/1overlayonslider_ghana.jpg" alt="" width="368" height="420"/>
+                        <img src="img/home/1overlayonslider_ghana.jpg" alt="Ghana Tours Banner" width="368" height="420"/>
                       <h5 class="box-categories-title">Ghana</h5>
                       </a>
                     </li>
@@ -314,7 +291,7 @@
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="egypt.html">
-                        <img src="img/home/2overlayonslider_egypt.jpg" alt="" width="368" height="420"/>
+                        <img src="img/home/2overlayonslider_egypt.jpg" alt="Egypt Tours Banner" width="368" height="420"/>
                       <h5 class="box-categories-title">Egypt</h5>
                       </a>
                     </li>
@@ -325,7 +302,7 @@
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="senegal.html">
-                        <img src="img/home/3overlayonslider_senegal.jpg" alt="" width="368" height="420"/>
+                        <img src="img/home/3overlayonslider_senegal.jpg" alt="Senegal Tours Banner" width="368" height="420"/>
                       <h5 class="box-categories-title">Senegal</h5>
                       </a>
                     </li>
@@ -336,7 +313,7 @@
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="ghana_togo_benin.html">
-                        <img src="img/home/4overlayonslider_benin.jpg" alt="" width="368" height="420"/>
+                        <img src="img/home/4overlayonslider_benin.jpg" alt="Benin Tours Banner" width="368" height="420"/>
                       <h5 class="box-categories-title">Benin</h5>
                       </a>
                     </li>
@@ -354,13 +331,13 @@
       <section class="section section-sm bg-default">
          <div class="container">
 
-          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Why Choose Us</span></h3>
+          <h1 class="oh-desktop" style="font-size: 2em;"><span class="d-inline-block wow slideInDown"><strong>Why Choose Us</strong></span></h1>
           <div class="row row-30 justify-content-center">
 
             <div class="col-sm-8 col-md-6 col-lg-6">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px; font: bolder;"><!--<img src="img/icons/thumbs-up.png" alt=""  width="50" height="50"/><br>--><span style="word-wrap: break-word; font-size: 20px;"><strong>Exceptional Service</strong></span><br><br><strong>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</strong></p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px; font: bolder;"><span style="word-wrap: break-word; font-size: 20px;"><strong>Exceptional Service</strong></span><br><br><strong>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</strong></p>
                 </div>
               </article>
             </div>
@@ -379,19 +356,27 @@
       <!-- Hot tours-->
       <section class="section section-sm bg-default">
         <div class="container">
-          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Trending Tours</span></h3>
+          <h3 class="oh-desktop" style="font-size: 2em;"><span class="d-inline-block wow slideInDown"><strong>Trending Tours</strong></span></h3>
           <div class="row row-sm row-40 row-md-50">
 
             <div class="col-sm-6 col-md-12 wow fadeInLeft">
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="Return To The Motherland Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br>  African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>June 18th - June 29th 2024 || October 22nd - November 1st 2024<br>12 Days</strong></a></div>
+                        <div class="product-big-rating">
+                          <a class="product-big-reviews" href="returntomotherland.html">
+                            <strong>
+                            <span style="color: gray;">June 18th - June 29th 2024 (SOLD OUT)</span>
+                            <br>
+                            October 22nd - November 1st 2024<br>12 Days
+                            </strong>
+                          </a>
+                        </div>
                       </div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience one of Ghana’s most exciting events.
@@ -407,17 +392,43 @@
               </article>
             </div>
 
+            <div class="col-sm-6 col-md-12 wow fadeInLeft">
+              <!-- Product Big-->
+              <article class="product-big">
+                <div class="unit flex-column flex-md-row align-items-md-stretch">
+                  <div class="unit-left"><a class="product-big-figure" href="blackhistory.html"><img src="img/tours/blackhistorymonth.jpg" alt="Black History Month Tour Banner" width="600" height="366"/></a></div>
+                  <div class="unit-body">
+                    <div class="product-big-body">
+                      <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
+                      <div class="group-sm group-middle justify-content-start">
+                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>February 25th - March 8th 2025<br>12 Days</strong></a></div>
+                      </div>
+                      <p class="product-big-text">
+                        February is Black History Month and as we all know; Black History begins in Africa! We invite you to come to Ghana to explore this country’s unique links to African-American history.
+                         Our Black History Month Tour is coupled with our Return to the Motherland
+                      </p>
+                      
+                      <a class="button button-black-outline button-ujarak" href="tel:+18479563319">Call For Details</a>
+                      <a class="button button-secondary-outline button-pipaluk" href="blackhistory.html" target="_blank">Read More</a>
+
+                      <div class="product-big-price-wrap"><span class="product-big-price">$3,599</span></div>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div>
+
 
             <div class="col-sm-6 col-md-12 wow fadeInLeft">
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="egypt.html"><img src="img/tours/egypt.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="egypt.html"><img src="img/tours/egypt.jpg" alt="Egypt Tour Banner" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="egypt.html">Egypt African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>October 1st - 12th 2024 || September 30th - October 11th 2025<br>12 Days</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>September 30th - October 11th 2025<br>12 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Egypt "Land Of Pharaohs" African Heritage Tour includes an unforgettable 4-Day luxury cruise on the River Nile; 
@@ -434,6 +445,7 @@
                 </div>
               </article>
             </div>
+
 
             
           </div>
@@ -459,7 +471,7 @@
           <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
             <div class="col-lg-12" data-wow-delay=".1s">
               <div>
-                <h3>About Us</h3>
+                <h3 class="oh-desktop" style="font-size: 2em;"><span class="d-inline-block wow slideInDown"><strong>About Us</strong></span></h3>
                 <!-- Bootstrap tabs-->
                 <div class="tabs-custom tabs-horizontal tabs-line tabs-line-big tabs-line-style-2 text-center text-md-left" id="tabs-7">
                   <!-- Nav tabs-->
@@ -500,7 +512,7 @@
                         <div class="unit">
                           <div class="unit-body">
                             <a class="d-flex justify-content-center" href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865" >
-                              <img class="center-block" src="img/general/bbb/bbb.png" />
+                              <img class="center-block" src="img/general/bbb/bbb.png" alt="BBB Seal"/>
                             </a>
                           </div>
                         </div>
