Updated home banner with ad

--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
         </div>
       </header>
       <!-- Swiper-->
-      <section class="breadcrumbs-custom-inset">
-        <div class="breadcrumbs-custom context-dark bg-overlay-60 box-position2 home-div">
-          <div class="container">
+      <section class="breadcrumbs-custom-inset showcursor"  onclick="window.location='t.php'">
+        <div class="breadcrumbs-custom context-dark bg-overlay-60 box-position2 home-div" onclick="window.location='t.php'">
+          <div class="container"  onclick="window.location='t.php'">
             <h1 class="breadcrumbs-custom-title hidecontent"></h1>
             <br>
             <h2 class="hidecontent"></h2>
